# system-monitor

./: .gitignore  CMakeLists.txt  README.md
include/: cpu.h  linux_parser.h
src/: main.cpp
src/backend/linux/: cpu.cpp  linux_parser.cpp
src/core/: CpuMonitorService.cpp  CpuMonitorService.hpp  CpuSnapshot.hpp  ICpuReader.hpp
src/platform/linux/: LinuxCpuReader.cpp  LinuxCpuReader.hpp
src/platform/windows/: WindowsCpuReader.cpp  WindowsCpuReader.hpp
